chore: Add JDBC unit-test coverage and Sonar fixes for entitlements-v2-core-plus